--- a/smartanthill/dashboard/site/app/views/device_info.html
+++ b/smartanthill/dashboard/site/app/views/device_info.html
@@ -1,7 +1,7 @@
 <h1>Device #{{ device.id }}</h1>
 
 <p>
-  <a href="#/devices/{{ device.id }}/edit" class="btn btn-primary" role="button">Edit</a>
+  <a href="#!/devices/{{ device.id }}/edit" class="btn btn-primary" role="button">Edit</a>
   <button class="btn btn-success" role="button" ng-click=trainIt()>Train It!</button>
   <button type="button" class="btn btn-link" ng-click="deleteDevice()">delete</button>
 </p>
