--- a/smartanthill/dashboard/site/app/views/console.html
+++ b/smartanthill/dashboard/site/app/views/console.html
@@ -1,20 +1,20 @@
 <h1>Console</h1>
 
-<button ng-click="tableParams.reload()" class="btn btn-default">Reload</button>
-<button ng-click="tableParams.sorting({})" class="btn btn-default">Clear sorting</button>
+<button ng-click="vm.tableParams.reload()" class="btn btn-default">Reload</button>
+<button ng-click="vm.tableParams.sorting({})" class="btn btn-default">Clear sorting</button>
 <div class="clearfix"></div>
-<div loading-container="tableParams.settings().$loading">
-  <table ng-table="tableParams" class="table">
+<div loading-container="vm.tableParams.settings().$loading">
+  <table ng-table="vm.tableParams" class="table">
     <tr ng-repeat="device in $data">
       <td data-title="'ID'" sortable="id">
-        {{device.id}}
+        {{ device.id }}
       </td>
       <td data-title="'Name'" sortable="name">
-        <a href="#/devices/{{device.id}}">{{device.name}}</a>
+        <a href="#!/devices/{{device.id}}">{{ device.name }}</a>
       </td>
       <td data-title="'Board'" sortable="board_name">
-        {{device.board_name}}
+        {{ device.board_name }}
       </td>
     </tr>
   </table>
-</div>   
+</div>
