Refactoring for BodyParts

--- a/smartanthill/dashboard/site/app/views/device-trainit.html
+++ b/smartanthill/dashboard/site/app/views/device-trainit.html
@@ -25,6 +25,6 @@
 </div>
 
 <div class="modal-footer">
-  <button class="btn btn-primary" ng-click="vm.start()" ng-disabled="!selectedSerialPort.selected || vm.btnDisabled.start">Start</button>
+  <button class="btn btn-primary" ng-click="vm.start()" ng-disabled="!vm.selectedSerialPort.selected || vm.btnDisabled.start">Start</button>
   <button class="btn btn-default" ng-click="vm.cancel()" ng-disabled="vm.btnDisabled.cancel">Cancel</button>
 </div>
